added a shadow map test, fixed slight bugs in buffer binding and added culling functionality

--- a/OpenGL/CMakeLists.txt
+++ b/OpenGL/CMakeLists.txt
@@ -95,6 +95,8 @@ set(HEADER_FILES
     src/vendor/imgui/imgui_stdlib.h
 
     src/vendor/stb_image/stb_image.h
+        src/Graphics/Utils/Meshes/Quad.h
+        src/Graphics/Utils/Meshes/Plane.h
 )
 source_group("Header Files" FILES ${HEADER_FILES})
 
