added simple debug tools with custom vertex type info to GraphicsDevice

--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=746,36
+Pos=641,37
 Size=525,380
 Collapsed=0
 
@@ -14,13 +14,13 @@ Size=335,179
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=56,341
+Pos=12,369
 Size=550,797
 Collapsed=1
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=60,60
-Size=339,290
+Pos=464,349
+Size=715,276
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
@@ -29,7 +29,81 @@ Size=416,156
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=60,60
+Pos=777,94
 Size=353,894
 Collapsed=0
+
+[Window][Debug Menu]
+Pos=330,377
+Size=498,351
+Collapsed=0
+
+[Window][Example: Console]
+Pos=491,240
+Size=520,600
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=654,313
+Size=500,440
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=707,307
+Size=430,450
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=209,279
+Size=520,600
+Collapsed=0
+
+[Window][Example: Auto-resizing window]
+Pos=88,124
+Size=486,335
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=60,60
+Size=689,293
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=127,281
+Size=247,48
+Collapsed=0
+
+[Window][Same title as another window##1]
+Pos=128,124
+Size=451,61
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=119,214
+Size=451,61
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=489,380
+Size=485,414
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=511,160
+Size=621,894
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=434,230
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=60,60
+Size=570,442
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
 
