--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -169,7 +169,7 @@ endif()
 set(ADDITIONAL_LIBRARY_DEPENDENCIES
     "OpenGL"
 )
-target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
+target_link_libraries(${PROJECT_NAME} PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES};")
 
 #target_link_directories(${PROJECT_NAME} PRIVATE
 #    "${CMAKE_SOURCE_DIR}/bin/${CMAKE_VS_PLATFORM_NAME}/$<CONFIG>"
