made edge colliders have thickness

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -58,4 +58,4 @@ set(ROOT_NAMESPACE Testing)
 
 target_include_directories(${PROJECT_NAME} PRIVATE src)
 
-target_link_libraries(${PROJECT_NAME} PUBLIC OpenGL)
+target_link_libraries(${PROJECT_NAME} PUBLIC Quasi)
