--- a/Quasi/CMakeLists.txt
+++ b/Quasi/CMakeLists.txt
@@ -161,6 +161,7 @@ source_group("Source Files" FILES ${SOURCE_FILES})
 set(ALL_FILES
     ${HEADER_FILES}
     ${SOURCE_FILES}
+        src/Physics/Shape2D.cpp
 )
 
 add_library(${PROJECT_NAME} STATIC ${ALL_FILES})
