--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=885,312
+Pos=696,508
 Size=385,363
 Collapsed=0
 
@@ -34,7 +34,7 @@ Size=353,894
 Collapsed=0
 
 [Window][Debug Menu]
-Pos=718,740
+Pos=667,-15
 Size=487,351
 Collapsed=0
 
